Commit to master of blogpost in its most new version

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,14 @@
         <link rel="stylesheet" href="css/styles.css"/>
     </head>
     <body>
-        <h1>Now, we are going to make a post!</h1>
-        <p>And this is the paragraph!</p>
+        <div id="container">
+            <div id="post">
+                <h1>This is the interesting tittle of the post!</h1>
+                <p>And this is the paragraph of the begining where 
+                we are going to explain the incredible things
+                that we can do with branches!
+            </div>
+        </div>
+        </p>
     </body>
 </html>
