--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="header">
+                Header
+            </div>
             <div id="post">
                 <h1>This is the interesting tittle of the post!</h1>
                 <p>And this is the paragraph of the begining where 
