--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id="header">
-                Header
+                Hyperblog
+                <span id="tagline">Your trusted blog</span>
             </div>
             <div id="post">
                 <h1>This is the interesting tittle of the post!</h1>
