Additional content for the blobg and a better font

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,9 +9,14 @@
                 <h1>This is the interesting tittle of the post!</h1>
                 <p>And this is the paragraph of the begining where 
                 we are going to explain the incredible things
-                that we can do with branches!
+                that we can do with branches!</p>
+                <p>Blogs are the best way to share information
+                    and your ideas.
+                    Much more than going to conferences 
+                    or show up on YouTube, but not if you
+                    are a rockstar.
+                    But perhaps you are not it... for now!</p>
             </div>
         </div>
-        </p>
     </body>
 </html>
