--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="header">
                 Hyperblog
-                <span id="tagline">Your trusted blog</span>
+                <span id="tagline">Your header blog</span>
             </div>
             <div id="post">
                 <h1>This is the interesting tittle of the post!</h1>
@@ -19,7 +19,7 @@
                     Much more than going to conferences 
                     or show up on YouTube, but not if you
                     are a rockstar.
-                    But perhaps you are not it... for now!</p>
+                    But perhaps you are not that... for now!</p>
             </div>
         </div>
     </body>
