--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="header">
                 Hyperblog
-                <span id="tagline">Your trusted blog</span>
+                <span id="tagline">Your master blog</span>
             </div>
             <div id="post">
                 <h1>This is the interesting tittle of the post!</h1>
@@ -20,6 +20,7 @@
                     or show up on YouTube, but not if you
                     are a rockstar.
                     But perhaps you are not it... for now!</p>
+                <p>Subscribe and like it!</p>
             </div>
         </div>
     </body>
