Adding subscribe and like it again

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,6 +20,7 @@
                     or show up on YouTube, but not if you
                     are a rockstar.
                     But perhaps you are not that... for now!</p>
+                <p>Subscirbe and like it!</p>
             </div>
         </div>
     </body>
